--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,24 +2,19 @@
   outline: none;
   border: none;
   margin: 0 0;
-  /* overflow: hidden; */
   scroll-behavior: smooth;
+  font-family: 'Gayathri', sans-serif;
 }
 body {
   position: relative;
   padding: 0 0;
-  scroll-snap-type: inline mandatory !important;
-
 }
 main>section {
   height: 100vh !important;
-  scroll-snap-align: start;
   width: 100%;
-
 }
 main {
   background: black;
-  scroll-snap-type: inline mandatory !important;
 }
 #navbarHor {
   background: transparent !important;
@@ -28,15 +23,15 @@ main {
 
   #navbarHor a {
     color: rgba(100,100,100, 0.7);
-    overflow:visible !important;
     padding: 0 0;
     margin-left: 30px;
     width: 100%;
     height:100%;
+    overflow:visible !important;
     position:relative;
   }
 
-  #navbarHor a:hover {
+  #navbarHor a:hover{
     border-bottom: crimson solid !important;
     border-radius: 0 !important;
     animation: underline 0.4s linear forwards;
@@ -65,8 +60,61 @@ main {
 
 #navigation-bar {
   height: 50px !important;
-}
+  }
+  #navbarvert {
+    position: fixed;
+    z-index: 100;
+    top: 30%;
+    height: 50%;
+    box-shadow: transparent 0 0 0;
+    width:140px;
+  }
+  #navbarvert a{
+    padding: 0 0;
+    margin-left: 0px;
+    width: 100%;
+    height:100%;
+    overflow:visible !important;
+    position:relative;
+    font-size: 17px;
+    width:25px;
+    opacity: 0.6;
+    font-size: 22px
+  }
+  #navbarvert a>i {
+    font-size: 19px
+  }
+  #navbarvert li a>h4 {
+    display: inline;
+    color: transparent;
+  }
+  #navbarvert a .fas {
+    color:crimson
+  }
+  #navbarvert a:hover {
+    padding-left: 30px;
+    transition: all 0.6s;
+    opacity: 1;
+  }
+  #navbarvert a:hover i{
+    transform: scale(1.5, 1.5);
+    transition: transform 0.6s;
+  }
+  #navbarvert a::before {
+    position: absolute;
+    content: attr(data-content); /* Prints the value of the attribute */
+    top: 8px;
+    color: crimson;
+    overflow: hidden;
+    transition: width 1500ms ease;
+    left: 30px;
+    width: 0;
+  }
 
+#navbarvert a:hover::before  {
+  left: 60px;
+  width: 130px;
+}
 #secQuote {
   margin-top: -50px;
   background: url("./Media/quoteBackground.jpg") no-repeat center;
@@ -74,11 +122,35 @@ main {
   box-shadow: inset 0px -200px 1000px #000;
   }
   #secQuote #quote {
-    width: 60%;
+    width: 60% !important;
+    position: absolute;
+    color: crimson !important;
+  }
+  #secQuote #quote h2 {
+    font-size: 2.7em !important ;
   }
   #secQuote footer {
     text-align: right !important;
   }
+  /* CSS Document */
+
+.runtext-container {
+  position: relative;
+  top: 50%;
+  font-size: 1.4em;
+  width: 800px;
+  color: crimson;
+}
+.runtext-container .holder .text-container {
+	display:inline;
+}
+.runtext-container a {
+  color: crimson;
+  padding: 0 20px;
+}
+.runtext-container .holder a:hover{
+	text-decoration: none;
+}
 
 #secEmpty {
   background: black;
@@ -166,89 +238,81 @@ main {
   #secBio img.blur {
     filter: blur(0px) !important;
   }
+  .runtext-container {
+    width: 100%;
+  }
 }
 
-
-#secTest {
-  background: #000;
-  height: 450px !important;
-  overflow: hidden !important;
-  --triangle-height: 100px;
-  overflow: hidden !important;
-  white-space: nowrap;
-  padding-top: 48px;
-  border: solid white !important;
+#secTest{
+  height:455px !important;
   }
 
-  #secTest>div{
-    display: block;
-    width: calc(100% - 30px) !important;
-    position: relative;
-    left: 15px;
-    padding-left: 2px;
+  #secTest figure {
+    background: #000;
+    overflow-x: scroll;
+    border: none !important;
+    padding: 0 0 !important;
+    height: 455px;
+    scroll-snap-type: inline mandatory;
+    overflow-y: hidden;
+    align-content: center;
+    border: 1em solid white;
+    display: grid;
+    grid: auto / repeat(9, auto);
+    grid-gap: 1em;
   }
 
-  #cardContainer.moveCard {
-    transition: margin-left 1s;
-  }
-
-   .card {
+  #secTest .card {
+    scroll-snap-align: center;
     background: #000 !important;
-    color: white;
     border-radius: 20px;
-    z-index: 0;
     width: 255px !important;
-    display: inline-block;
+    height: 354px;
     margin:0 5px !important;
     padding-left: 0px!important;
     padding-right: 0px!important;
     border: solid #0ff;
-    height: 354px;
     overflow: visible;
   }
-   .card:hover{
+  #secTest .card:hover{
     transform:scale(1.23);
-    box-shadow: 0 0 20px 10px #0ff;
+    box-shadow: 0 0 13px 6px #0ff;
     transition: all 0.4s;
-    z-index:1;
+    z-index:2 !important;
   }
-   .card img {
+  #secTest .card img {
     max-width: 90px;
     border-radius: 50%;
-    z-index: 2 !important;
+    z-index: 1 !important;
     position: absolute;
     box-shadow: 0px 0px 0px 7px rgba(0,0,0,1)
   }
-   .card h3 {
+  #secTest .card h3 {
     display: inline !important;
     position: absolute;
     right: 30px;
-    line-height: 40px;
     color: #0ff;
   }
 
-   .card .card-body {
+  #secTest .card .card-body {
     text-align: center;
     text-shadow: 2px 4px 3px rgba(50, 80, 62, 0.6);
-    background: transparent !important;
     position: absolute;
     height: 75%;
     bottom: 0;
     z-index: 1;
-    color: #000;
     font-size: 1.2em;
     padding: 30px;
   }
 
-  blockquote {
-    font-family: adobe-garamond-pro, serif;
+  #secTest blockquote {
+    /* font-family: 'adobe-garamond-pro', serif !important; */
     font-style: italic;
     font-weight: 500 !important;
-    font-size: 1.1em;
-    white-space:normal;
+    font-size: 1em;
   }
 
-  .triangle {
+  #secTest .triangle {
     background: white;
     border-radius: 20px;
     height: 350px;
@@ -257,50 +321,48 @@ main {
     z-index: 100 !important;
     overflow: visible !important;
   }
-  #alex .triangle{
+  #secTest #alex .triangle{
     background: linear-gradient(160deg, rgb(200,255,255) 100%,rgb(0,0,0) 100%);
   }
-  #james .triangle {
+  #secTest #james .triangle {
     background: linear-gradient(160deg, #ff0 33%, #ff6 50%, rgb(255, 255, 255) 95%);
   }
-  #secTest #james h3 {
+  #secTest #secTest #james h3 {
     color: #ff0 !important;
   }
-  #selena .triangle{
-    background: linear-gradient(160deg, #0ff 3%, #6ff 50%,rgb(255,255,255) 95%);
+  #secTest #selena .triangle{
+    background: linear-gradient(160deg, #0ff 23%, #6ff 50%,rgb(255,255,255) 95%);
   }
-  /* #james .fa-quote-right {
-    background: linear-gradient(210deg, rgb(0, 255, 255) 46%, rgb(0, 0, 0) 46%) !important;
-  } */
-
-  #secTest button {
-    box-shadow: none !important;
-    overflow: visible !important;
-    height: 350px !important;
+  #secTest #jam .triangle{
+    background: linear-gradient(160deg, #DC143C 33%, #f38399 50%,rgb(255,255,255) 95%);
+  }
+  #secTest #jam h3 {
+    color: crimson !important;
+  }
+  #secTest #jam .fa-quote-right{
     position: absolute;
-    z-index: 5;
+    top: -6px;
+    transform: scale(2);
+    background: linear-gradient(210deg, crimson 46%, rgb(0, 0, 0) 46%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    text-shadow: none !important;
   }
-  #secTest button:nth-child(1) {
-    left:0;
-  }
-  #secTest button:nth-child(2) {
-    margin-left: 95%;
-  }
-
-  #secTest{
-    position: absolute;
-    width: 100%;
-    z-index: 20;
-    overflow: hidden !important;
-    height: 350px;
-  }
-
-  #secTest button i {
+  #secTest #jam .card-body {
     color: #000 !important;
-    /* font-size: 1em !important; */
-    transform: scale(2, 3)
   }
-  .fa-quote-right {
+  #secTest #jam {
+    color: crimson !important;
+    border: solid crimson !important;
+  }
+  #secTest #jam:hover{
+   transform:scale(1.23);
+   box-shadow: 0 0 13px 6px crimson;
+   transition: all 0.4s;
+   z-index:1;
+  }
+
+  #secTest .fa-quote-right {
     position: absolute;
     top: -6px;
     transform: scale(2);
@@ -309,38 +371,202 @@ main {
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent !important;
     text-shadow: none !important;
-    text-outline: solid black 3px;
   }
 
-
-#secFooter{
-  background: #ff0 !important;
-  height:100vh !important;
-  margin-top: 450px;
-  padding: 0 0 !important;
+  #secTest #james .triangle{
+    background: linear-gradient(160deg, #666 30%, #333 50%, #000 95%) !important;
+  }
+  #secTest #james h3 {
+    color: #ff0 !important;
+  }
+  #secTest #james .fa-quote-right{
+    position: absolute;
+    top: -6px;
+    transform: scale(2);
+    background: linear-gradient(210deg, #ff0 46%, rgb(0, 0, 0) 46%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    text-shadow: none !important;
+  }
+  #secTest #james {
+    color: #ff0 !important;
+    border: solid #ff0 !important;
+  }
+  #secTest #james:hover{
+   transform:scale(1.23);
+   box-shadow: 0 0 13px 6px #ff0;
+   transition: all 0.4s;
+   z-index:1;
   }
 
-  #secFooter figure {
-    overflow-x: scroll;
-    border: none !important;
+  #secTest #ale .triangle{
+    background: linear-gradient(160deg, #666 30%, #333 50%, #000 95%) !important;
+  }
+  #secTest #ale h3 {
+    color: #0ff !important;
+  }
+  #secTest #ale .fa-quote-right{
+    position: absolute;
+    top: -6px;
+    transform: scale(2);
+    background: linear-gradient(210deg, #0ff 46%, rgb(0, 0, 0) 46%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    text-shadow: none !important;
+  }
+  #secTest #ale {
+    color: #0ff !important;
+    border: solid #0ff !important;
+  }
+  #secTest #ale:hover{
+   transform:scale(1.23);
+   box-shadow: 0 0 13px 6px #0ff;
+   transition: all 0.4s;
+   z-index:1;
+  }
+
+  #secTest #ronal .triangle{
+    background: linear-gradient(160deg, #ff0 33%, #ff6 50%,rgb(255,255,255) 95%);
+  }
+  #secTest #ronal h3 {
+    color: #ff0 !important;
+  }
+  #secTest #ronal .fa-quote-right{
+    position: absolute;
+    top: -6px;
+    transform: scale(2);
+    background: linear-gradient(210deg, #ff0 46%, rgb(0, 0, 0) 46%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    text-shadow: none !important;
+  }
+  #secTest #ronal {
+    /* color: #ff0 !important; */
+    border: solid #ff0 !important;
+  }
+  #secTest #ronal:hover{
+   transform:scale(1.23);
+   box-shadow: 0 0 13px 6px #ff0;
+   transition: all 0.4s;
+   z-index:1;
+  }
+
+  #secTest figure>div:nth-child(5) .triangle{
+    /* background: linear-gradient(160deg, #f44 33%, #f88 50%,rgb(255,255,255) 95%) !important; */
+    /* background: linear-gradient(160deg, #c00 33%, #c44 50%,rgb(255,255,255) 95%) !important; */
+    background: linear-gradient(160deg, #666 30%, #333 50%, #000 95%) !important;
+  }
+  #secTest figure>div:nth-child(5) h3 {
+    color: crimson !important;
+  }
+  #secTest figure>div:nth-child(5) .fa-quote-right{
+    position: absolute;
+    top: -6px;
+    transform: scale(2);
+    /* background: linear-gradient(210deg, rgb(255, 255, 0) 46%, rgb(0, 0, 0) 46%); */
+    background: linear-gradient(210deg, crimson 46%, rgb(0, 0, 0) 46%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    text-shadow: none !important;
+  }
+  #secTest figure>div:nth-child(5) {
+    color: crimson !important;
+    border: solid crimson !important;
+  }
+  #secTest figure>div:nth-child(5):hover{
+   transform:scale(1.23);
+   box-shadow: 0 0 13px 6px crimson;
+   transition: all 0.4s;
+   z-index:1;
+  }
+
+#secFooter {
+  border-top: solid white;
+  text-align: center !important;
+  color: crimson;
+  padding-top:20px;
+  height: 300px !important;
+  }
+  #secFooter>div>*{
+    margin: 15px 0 !important;
+  }
+
+  #secFooter ul {
+    margin: 0 auto !important;
+    width: 150px;
+  }
+  #secFooter ul li{
+    border: none;
+    background: transparent;
+  }
+
+  #secFooter div>a {
+    display: inline;
+    /* font-size: 1.2em; */
+    margin-top: -15px !important;
+    font-style: italic;
+    color:#ea647f;
     padding: 0 0 !important;
-    height: 450px;
-    scroll-snap-type: inline mandatory;
-    overflow-y: hidden;
-    background: #0f0 !important;
+    overflow: hidden;
+
+  }
+  .fa-instagram  {
+    background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    height: 100%;
+    padding-top: 3px;
   }
 
-  #secFooter figure>* {
-    scroll-snap-align: center;
-    width: 255px !important;
-    height: 350px !important;
+  #secFooter div>a{
+    padding: 0 0 ;
+    margin-left: 30px ;
+    margin-top: -20px;
+    width: 100% ;
+    height:100% ;
+    overflow:visible !important;
+    position:relative ;
+  }
+  #secFooter .fab {
+    transform: scale(1.3) !important;
+    line-height: 1.2em;
+  }
+  #secFooter .fab:hover {
+    color: crimson !important;
+  }
+  #secFooter .fa-instagram:hover {
+    background: crimson !important;
+    -webkit-background-clip: text !important;
   }
 
-  #secFooter figure {
-    align-content: center;
-    border: 1em solid white;
-    background: white;
-    display: grid;
-    grid: auto / repeat(8, auto);
-    grid-gap: 1em;
+  #secFooter .leftRight::before {
+    top: -2px !important;
   }
+
+  #secFooter h2{
+    color: white;
+    text-shadow: 0px 0px 40px #f00;
+    -webkit-animation: neon 1.5s ease-in-out infinite alternate;
+  }
+  @-webkit-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff,
+               0 0 20px  #fff,
+               0 0 30px  #fff,
+               0 0 40px  #FF1177,
+               0 0 70px  #FF1177,
+               0 0 80px  #FF1177,
+               0 0 100px #FF1177,
+               0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff,
+               0 0 10px #fff,
+               0 0 15px #fff,
+               0 0 20px #FF1177,
+               0 0 35px #FF1177,
+               0 0 40px #FF1177,
+               0 0 50px #FF1177,
+               0 0 75px #FF1177;
+  }
+}
